--- a/css/styles.css
+++ b/css/styles.css
@@ -561,10 +561,14 @@ font-family: "Raleway", sans-serif;
 }
 
 .footer-soc-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
 
 .footer-soc-media {
+
     display: flex;
     font-weight: 500;
     font-size: 16px;
@@ -573,12 +577,15 @@ font-family: "Raleway", sans-serif;
     color: #fff;
     margin-bottom: 16px;
 }
-            
+
 
 .footer-soc-icon-list {
+
     display: flex;
+    margin-top: 16px;
         gap: 16px;
-        /* justify-content: center; */
+        justify-content: center;
+
 }
 
 .footer-soc-icon-list-item {
@@ -606,6 +613,287 @@ font-family: "Raleway", sans-serif;
 }
 
 .footer-soc-icon {
+    fill: #f4f4fd;
+}
+
+.footer-form-wrap {
+    margin-left: 80px;
+}
+
+.footer-form-name {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+}
+
+.footer-form {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    background-color: transparent;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.footer-input::placeholder {
+        font-size: 12px;
+        line-height: 200%;
+        letter-spacing: 0.04em;
+        color: #fff;
+}
+
+.footer-btn {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #fff;
+        border-radius: 4px;
+        padding: 8px 24px;
+        width: 165px;
+        height: 40px;
+        background-color: #4d5ae5;
+        border: none;
+        display: flex;
+}
+
+.subscribe-icon {
+    fill: #fff;
+    align-items: center;
+    justify-content: center;
+    margin-left: 16px;
+}
+
+/* backdrop */
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background-color: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.is-open {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 24px;
+    
+
+}
+
+.modal-open-btn {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    border: 1px;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
+    background-color: #E7E9FC;
+    top: 24px;
+    right: 24px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+
+
+}
+
+.modal-open-btn {
+    cursor: pointer;
+    
+}
+
+.modal-close-btn {
+    fill: #2E2F42;
+
+
+}
+
+.modal-title {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+        text-align: center;
+        margin-bottom: 16px;
+        padding-top: 33px;
+
+
+
+}
+
+.modal-form {
+
+}
+
+.modal-field {
+    margin-bottom: 18px;
+}
+
+.modal-input-wrap {
+    position: relative;
+}
+
+.modal-input {
+    border: 1px solid #2E2F4266;
+        border-radius: 4px;
+        width: 100%;
+        height: 40px;
+        background-color: transparent;
+            padding-left: 38px;
+            outline: transparent;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-input:focus + .modal-field-icon {
+    fill: #4D5AE5;
+}
+
+.modal-label {
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+}
+
+.modal-field-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-text-area {
+            border: 1px solid #2E2F4266;
+            border-radius: 4px;
+            width: 100%;
+            height: 120px;
+            background-color: transparent;
+            outline: transparent;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            resize: none;
+            font-size: 12px;
+            padding: 16px 8px;
+            margin-bottom: 16px;
+                }
+
+.modal-text-area:focus {
+    border-color: #4D5AE5;
+}
+
+.button-submit {
+    border: none;
+    border-radius: 4px;
+        padding: 16px 32px;
+        width: 169px;
+            background: #4D5AE5;
+            box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 150%;
+                letter-spacing: 0.04em;
+                text-align: center;
+                color: #FFFFFF;
+                display: block;
+                    margin: 0 auto;
+                    min-width: 169px;
+                    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-submit {
+    cursor: pointer;
+}
+
+.button-submit:hover {
+    background-color: #404BBF;
+}
+
+.button-submit:focus {
+    background-color: #404BBF;
+}
+
+
+.check-text {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+        display: flex;
+        align-items: center;
+
+}
+
+.modal-check {
+    border-radius: 2px;
+        border: 1px solid #2E2F4266;
+        margin-top: 16px;
+        padding-right: 8px;
+}
+
+.privacy-policy-text {
+    line-height: 133%;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        color: #4D5AE5;
+                margin-left: 4px;
+
+}
+
+.check-text span {
+border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        margin-right: 8px;
+        width: 16px;
+        height: 16px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        fill: transparent;
+
+}
+
+.modal-check:checked + .check-text span {
+    background-color: #404bbf;
+    border: none;
     fill: #f4f4fd;
 }
 
