--- a/css/styles.css
+++ b/css/styles.css
@@ -640,7 +640,7 @@ font-family: "Raleway", sans-serif;
     border: 1px solid #fff;
     border-radius: 4px;
     background-color: transparent;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding-left: 16px;
     padding-right: 16px;
 }
@@ -666,6 +666,7 @@ font-family: "Raleway", sans-serif;
         background-color: #4d5ae5;
         border: none;
         display: flex;
+        cursor: pointer;
 }
 
 .subscribe-icon {
@@ -683,6 +684,7 @@ font-family: "Raleway", sans-serif;
     position: fixed;
     top: 0;
     background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
