--- a/css/styles.css
+++ b/css/styles.css
@@ -643,13 +643,18 @@ font-family: "Raleway", sans-serif;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding-left: 16px;
     padding-right: 16px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
 }
 
 .footer-input::placeholder {
         font-size: 12px;
         line-height: 200%;
         letter-spacing: 0.04em;
-        color: #fff;
+        color: #ffffff;
+
 }
 
 .footer-btn {
@@ -661,12 +666,14 @@ font-family: "Raleway", sans-serif;
         color: #fff;
         border-radius: 4px;
         padding: 8px 24px;
-        width: 165px;
+        min-width: 165px;
         height: 40px;
         background-color: #4d5ae5;
         border: none;
         display: flex;
         cursor: pointer;
+        justify-content: center;
+        align-items: center;
 }
 
 .subscribe-icon {
@@ -699,23 +706,22 @@ font-family: "Raleway", sans-serif;
 .modal {
     width: 408px;
     min-height: 584px;
-    background-color: #fcfcfc;
+    background: #fcfcfc;
     border-radius: 4px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 24px;
-    
-
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
 }
 
 .modal-open-btn {
     position: absolute;
     width: 24px;
     height: 24px;
-    border-radius: 100%;
-    border: 1px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     stroke-width: 1px;
     stroke: rgba(0, 0, 0, 0.1);
     background-color: #E7E9FC;
@@ -724,8 +730,16 @@ font-family: "Raleway", sans-serif;
     align-items: center;
     justify-content: center;
     display: flex;
+    border-radius: 50%;
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
 
+.modal-open-btn:hover,
+.modal-open-btn:focus {
+    background-color: #404bbf;
+    border: none;
 }
 
 .modal-open-btn {
@@ -734,9 +748,12 @@ font-family: "Raleway", sans-serif;
 }
 
 .modal-close-btn {
-    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    fill: #ffffff;
 }
 
 .modal-title {
@@ -747,22 +764,19 @@ font-family: "Raleway", sans-serif;
         color: #2E2F42;
         text-align: center;
         margin-bottom: 16px;
-        padding-top: 33px;
-
-
 
 }
 
 .modal-form {
-
 }
 
 .modal-field {
-    margin-bottom: 18px;
+    margin-bottom: 8px;
 }
 
 .modal-input-wrap {
     position: relative;
+    margin-bottom: 16px;
 }
 
 .modal-input {
@@ -813,8 +827,11 @@ font-family: "Raleway", sans-serif;
             transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             resize: none;
             font-size: 12px;
-            padding: 16px 8px;
+            padding: 8px 16px;
             margin-bottom: 16px;
+            line-height: 1.17;
+            letter-spacing: 0.04em;
+            color: rgba(46, 47, 66, 0.4);
                 }
 
 .modal-text-area:focus {
@@ -880,7 +897,7 @@ font-family: "Raleway", sans-serif;
 
 }
 
-.check-text span {
+.user-privacy-icon {
 border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
         margin-right: 8px;
@@ -888,8 +905,11 @@ border-radius: 2px;
         height: 16px;
         align-items: center;
         justify-content: center;
-        display: flex;
+        display: inline-flex;
         fill: transparent;
+        background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
