--- a/css/styles.css
+++ b/css/styles.css
@@ -715,6 +715,7 @@ font-family: "Raleway", sans-serif;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
+
 }
 
 .modal-open-btn {
@@ -744,7 +745,6 @@ font-family: "Raleway", sans-serif;
 
 .modal-open-btn {
     cursor: pointer;
-    
 }
 
 .modal-close-btn {
@@ -771,7 +771,7 @@ font-family: "Raleway", sans-serif;
 }
 
 .modal-field {
-    margin-bottom: 8px;
+    margin-bottom: 24px;
 }
 
 .modal-input-wrap {
@@ -905,12 +905,12 @@ border-radius: 2px;
         height: 16px;
         align-items: center;
         justify-content: center;
-        display: inline-flex;
         fill: transparent;
         background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
             border 250ms cubic-bezier(0.4, 0, 0.2, 1),
             fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: inline-flex;
 }
 
 .modal-check:checked + .check-text span {
