--- a/css/styles.css
+++ b/css/styles.css
@@ -751,8 +751,11 @@ font-family: "Raleway", sans-serif;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal-open-btn:hover .modal-close-btn {
+    fill: #ffffff;
+}
+
+.modal-open-btn:focus .modal-close-btn {
     fill: #ffffff;
 }
 
@@ -886,6 +889,7 @@ font-family: "Raleway", sans-serif;
         border: 1px solid #2E2F4266;
         margin-top: 16px;
         padding-right: 8px;
+        margin-bottom: 24px;;
 }
 
 .privacy-policy-text {
